# baox

./: .gitignore  README.md  pyproject.toml  setup.py
baox/: base_optimization.py  data_types.py  test_functions.py  utils.py
baox/acquisition/: __init__.py  base.py  ei.py  qei_cost_mf.py  qei_fantasy.py  qei_joint.py  qkg_cost_mf.py
baox/bo/: __init__.py  acquisition_function.py  base.py  bayesian.py  bo.py  hv.py  mf_bo.py
baox/surrogate/: __init__.py  base.py  gp.py  kernel.py  mean.py  mf_gp.py
baox/tutorials/: 01_single_output_gp.ipynb
examples/: main.py  plot_git.py  run_script.sh  test.py  tutorial_bo.py  tutorial_gp.py  tutorial_mfgp_gp.py  tutorial_qbo.py
test/: run_test.sh
test/bo/: 01_1D_qbo.py  02_2D_qbo.py  03_1D_mfbo.py  plot_git.py
test/gps/: 01_1D_gp.py  02_2D_gp.py  03_1D_mfgp.py  04_2D_mfgp.py  05_1D_mfgp_4.py
